--- a/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
@@ -61,10 +61,9 @@
             </div>
             <div style="border: none" class="input">
                 <div class="input-wrapper" onclick="$(this).find('input').focus()">
-                    <button style="width: 45%; float: right" id="generateCode" onclick="sendSmsCode()" type="button" class="check_code">
+                    <button style="width: 45%; float: right" id="generateCode" onclick="sendSmsCode(0)" type="button" class="check_code">
                         获取验证码
                     </button>
-                    @*<input type="button" id="generateCode" onclick="sendSmsCode()" value="获取验证码" style="width: 45%; float: right" class="check_code" />*@
                 </div>
             </div>
             <div class="agree mui-input-row mui-checkbox mui-left">
@@ -699,7 +698,6 @@
 
 @section Scripts{
     <script>
-
         // 注册
         $('#frm').submit(function () {
             if ($('#checkbox').is(':checked')) {
@@ -728,42 +726,6 @@
             }
             return false;
         });
-
-        // 倒计时
-        var countdown = 60;
-        var _generate_code = $("#generateCode");
-        function settime() {
-            if (countdown === 0) {
-                _generate_code.attr("disabled", false);
-                _generate_code.text("获取验证码");
-                countdown = 60;
-                return false;
-            } else {
-                _generate_code.attr("disabled", true);
-                _generate_code.text("重新发送(" + countdown + ")");
-                countdown--;
-            }
-            setTimeout(function () {
-                settime();
-            }, 1000);
-        }
-
-        // 发短信
-        function sendSmsCode() {
-            var phone = $("#phoneNum").val();
-            if (phone != "") {
-                _generate_code.attr("disabled", true);
-                getAjax("/SchoolBus/SendSmsCode", { phoneNum: phone, verificationCodeType: 0 }, function (data) {
-                    if (data.status == 1) {
-                        settime();
-                    } else {
-                        alert(data.msg);
-                    }
-                }, function () { _generate_code.attr("disabled", false); });
-            } else {
-                alert("请输入手机号");
-            }
-        }
 
         // 服务条款
         function popoverClick(d) {
