--- a/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
@@ -8,18 +8,18 @@
     <img src="~/img/pic1.jpg" />
 </div>
 <div class="information">
-    <form id="frm" name="frm" method="post" autocomplete="off" asp-antiforgery="true">
+    <form id="frm" name="frm" method="post" asp-action="SaveCardInfo" autocomplete="off" asp-antiforgery="true">
         <div class="box">
             <h1 class="title">您的信息</h1>
             <div class="erweima">
                 <span class="w25">卡号</span>
-                <input disabled="disabled" type="text" asp-for="fcode" value="@(Model?.fcode)" maxlength="10" />
+                <input readonly="readonly" type="text" asp-for="fcode" value="@(Model?.fcode)" maxlength="10" />
                 <span asp-validation-for="fcode" style="color: red;"></span>
             </div>
             <div class="erweima" onclick="$(this).find('input').focus()">
                 <span class="w25">手机号码</span>
                 <span asp-validation-for="fphone" style="color: red"></span>
-                <input disabled="disabled" id="phoneNum" type="text" asp-for="fphone" value="@(Model?.fphone)" maxlength="11" />
+                <input readonly="readonly" id="phoneNum" type="text" asp-for="fphone" value="@(Model?.fphone)" maxlength="11" />
                 <button type="button" class="yanzhengma" onclick="modifyPhoneNum()">修改</button>
             </div>
             <div id="vcoded" class="erweima1" onclick="$(this).find('input').focus()" style="display: none;">
@@ -60,7 +60,7 @@
                 <input type="text" asp-for="fbirthdate" value="@(Model?.fbirthdate)" readonly="readonly" />
             </div>
         </div>
-        <button type="button" class=" btn mui-btn mui-btn-warning">保存信息</button>
+        <button type="submit" class=" btn mui-btn mui-btn-warning">保存信息</button>
     </form>
 </div>
 
@@ -102,7 +102,31 @@
                 });
             }
         });
+        // 保存信息
+        $('#frm').submit(function () {
+            if ($(this).valid()) {
+                $.ajax({
+                    url: this.action,
+                    type: this.method,
+                    data: $(this).serialize(),
+                    success: function (result) {
+                        if (result.status === 1) {
+                            alert(result.msg);
+                            //window.location.href = "/SchoolBus/GoBinding";
+                        } else {
+                            alert(result.msg);
+                        }
+                    },
+                    error: function (result) {
+                        console.log(result);
+                    },
+                    complete: function (XMLHttpRequest, textStatus) {
 
+                    }
+                });
+            }
+            return false;
+        });
         // 获取学校列表并赋值
         function getSchoolList() {
             $.ajax({
@@ -118,10 +142,11 @@
                 }
             });
         }
+
         // 修改按钮
         function modifyPhoneNum() {
             $("#vcoded").show();
-            $("#phoneNum").attr("disabled", false);
+            $("#phoneNum").attr("readonly", false);
         }
     </script>
 }
