待修改完善信息BUG

--- a/SchoolBusWXWeb/Views/SchoolBus/GoBinding.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoBinding.cshtml
@@ -13,7 +13,7 @@
 @section Scripts{
     <script>
         $('#doInfo').on('click', function () {
-            window.location.href = "/goCardInfo?wxid=" + localStorage.getItem("wxid"); // 跳转完善信息页
+            window.location.href = "/SchoolBus/GoCardInfo"; // 跳转完善信息页
         });
     </script>
 }
